--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ output
 *.json
 *.diff
 *.jpg
-!imgs
+!/imgs/MDQE_overview.jpg
+!/imgs/sota_yt21_coco.png
 
 # compilation and distribution
 __pycache__
