add trained models

--- a/configs/R50_coco.yaml
+++ b/configs/R50_coco.yaml
@@ -18,8 +18,8 @@ MODEL:
     DEC_TEMPORAL: True
     HIDDEN_DIM: 256
     NUM_CLASSES: 80
-    WINDOW_CLIPASS: 5
-    TRACK_EMBED_DIM: 64
+    WINDOW_INTER_FRAME_ASSOCIATION: 5
+    QUERY_EMBED_DIM: 64
 DATASETS:
   TRAIN: ("coco_2017_train",)
   TEST: ("coco_2017_val",)
