--- a/configs/R50_ovis_720.yaml
+++ b/configs/R50_ovis_720.yaml
@@ -5,21 +5,22 @@ MODEL:
   MASK_ON: True
   MDQE:
     NUM_CLASSES: 25
-    WINDOW_CLIPASS: 5
+    WINDOW_INTER_FRAME_ASSOCIATION: 5
     CLIP_STRIDE: 1
-    SAMPLING_FRAME_NUM_TEST: 3
-    WINDOW_FRAME_NUM_TEST: 10
+    SAMPLING_FRAME_NUM_TEST: 4
+    WINDOW_FRAME_NUM_TEST: 20
+    MAX_NUM_INSTANCES: 120
     MERGE_ON_CPU: True
-    APPLY_CLS_THRES: 0.1
+    APPLY_CLS_THRES: 0.2
 DATASETS:
   DATASET_RATIO: [0.75, 1.0]
   TRAIN: ("coco2ovis_train", "ytvis_ovis_train")
-  TEST: ("ytvis_ovis_val",)
+  TEST: ("ytvis_ovis_val",)   # during training, use TEST: ("ytvis_ovis_dev",)
 SOLVER:
   IMS_PER_BATCH: 8
   BASE_LR: 0.00005
-  STEPS: (20000, )
-  MAX_ITER: 24000
+  STEPS: (10000, )
+  MAX_ITER: 12000
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 10
   WEIGHT_DECAY: 0.0001
@@ -30,16 +31,18 @@ SOLVER:
     CLIP_TYPE: "full_model"
     CLIP_VALUE: 0.01
     NORM_TYPE: 2.0
+  CHECKPOINT_PERIOD: 2000
 INPUT:
   FORMAT: "RGB"
-  SAMPLING_FRAME_NUM: 3
+  SAMPLING_FRAME_NUM: 4
   SAMPLING_FRAME_RANGE: 10
+  PRETRAIN_FRAME_NUM: 4
   AUGMENTATIONS: []
   RANDOM_FLIP: "flip_by_clip"
   MIN_SIZE_TRAIN_SAMPLING: "choice_by_clip"
   MIN_SIZE_TRAIN: (480, 512, 544, 576, 608, 640, 672, 704, 736, 768, 800)
   MAX_SIZE_TRAIN: 1333
-  MIN_SIZE_TEST: 720
+  MIN_SIZE_TEST: 640
   CROP:
     ENABLED: True
     TYPE: "relative_range"
@@ -54,6 +57,6 @@ INPUT:
       TYPE: "absolute_range"
       SIZE: (384, 600)
 TEST:
-  EVAL_PERIOD: 5000
+  EVAL_PERIOD: 2000
   DETECTIONS_PER_IMAGE: 15
-OUTPUT_DIR: output/ovis/mdqe_r50_ovis_bs8_720p_f3/
+OUTPUT_DIR: output/ovis/mdqe_r50_ovis_bs8_720p_f4/
