--- a/configs/R50_ytvis21.yaml
+++ b/configs/R50_ytvis21.yaml
@@ -5,16 +5,16 @@ MODEL:
   MASK_ON: True
   MDQE:
     NUM_CLASSES: 40
-    WINDOW_CLIPASS: 7
+    WINDOW_INTER_FRAME_ASSOCIATION: 7
     CLIP_STRIDE: 1
     SAMPLING_FRAME_NUM_TEST: 4
-    WINDOW_FRAME_NUM_TEST: 20
-    MERGE_ON_CPU: True
+    MAX_NUM_INSTANCES: 70
+    WINDOW_FRAME_NUM_TEST: 30
     APPLY_CLS_THRES: 0.1
 DATASETS:
   DATASET_RATIO: [0.75, 1.0]
   TRAIN: ("coco2ytvis2021_train", "ytvis_2021_train")
-  TEST: ("ytvis_2021_val",)
+  TEST: ("ytvis_2021_val",)   # during training, use TEST: ("ytvis_2021_dev",)
 SOLVER:
   IMS_PER_BATCH: 16
   BASE_LR: 0.0001
@@ -30,9 +30,12 @@ SOLVER:
     CLIP_TYPE: "full_model"
     CLIP_VALUE: 0.01
     NORM_TYPE: 2.0
+  CHECKPOINT_PERIOD: 2000
 INPUT:
   FORMAT: "RGB"
   SAMPLING_FRAME_NUM: 4
+  SAMPLING_FRAME_RANGE: 10
+  PRETRAIN_FRAME_NUM: 4
   AUGMENTATIONS: []
   RANDOM_FLIP: "flip_by_clip"
   MIN_SIZE_TRAIN_SAMPLING: "choice_by_clip"
@@ -53,6 +56,6 @@ INPUT:
       TYPE: "absolute_range"
       SIZE: (384, 600)
 TEST:
-  EVAL_PERIOD: 5000
+  EVAL_PERIOD: 2000
   DETECTIONS_PER_IMAGE: 10
 OUTPUT_DIR: output/ytvis/mdqe_r50_ytvis21_bs16_360p_f4/
