--- a/configs/swinl_coco.yaml
+++ b/configs/swinl_coco.yaml
@@ -16,14 +16,14 @@ MODEL:
     APE: False
   MDQE:
     NUM_OBJECT_QUERIES: 200
-    MLP_RATIO: 8
+    MLP_RATIO: 4
     ENC_LAYERS: 6
     DEC_LAYERS: 6
     NUM_FEATURE_LEVELS: 4
     DEC_TEMPORAL: True
     HIDDEN_DIM: 192
     NUM_CLASSES: 80
-    TRACK_EMBED_DIM: 64
+    QUERY_EMBED_DIM: 64
 DATASETS:
   TRAIN: ("coco_2017_train",)
   TEST: ("coco_2017_val",)
