--- a/configs/swinl_ovis.yaml
+++ b/configs/swinl_ovis.yaml
@@ -3,16 +3,17 @@ MODEL:
   WEIGHTS: "pretrained/mdqe_swinl_patch4_window24_384_22k_coco_bs8_3x_f1.pth"
   MDQE:
     NUM_CLASSES: 25
-    WINDOW_CLIPASS: 5
+    WINDOW_INTER_FRAME_ASSOCIATION: 5
     CLIP_STRIDE: 1
     SAMPLING_FRAME_NUM_TEST: 2
-    WINDOW_FRAME_NUM_TEST: 10
+    MAX_NUM_INSTANCES: 120
+    WINDOW_FRAME_NUM_TEST: 20
     MERGE_ON_CPU: True
     APPLY_CLS_THRES: 0.1
 DATASETS:
   DATASET_RATIO: [ 0.75, 1.0 ]
   TRAIN: ("coco2ovis_train", "ytvis_ovis_train")
-  TEST: ("ytvis_ovis_val",)
+  TEST: ("ytvis_ovis_val",)  # during training, use TEST: ("ytvis_ovis_dev",)
 SOLVER:
   IMS_PER_BATCH: 8
   BASE_LR: 0.00005
@@ -32,6 +33,7 @@ INPUT:
   FORMAT: "RGB"
   SAMPLING_FRAME_NUM: 2
   SAMPLING_FRAME_RANGE: 7
+  PRETRAIN_FRAME_NUM: 1
   AUGMENTATIONS: []
   RANDOM_FLIP: "flip_by_clip"
   MIN_SIZE_TRAIN_SAMPLING: "choice_by_clip"
