--- a/configs/swinl_ytvis21.yaml
+++ b/configs/swinl_ytvis21.yaml
@@ -3,16 +3,16 @@ MODEL:
   WEIGHTS: "pretrained/mdqe_swinl_patch4_window24_384_22k_coco_bs8_3x_f1.pth"
   MDQE:
     NUM_CLASSES: 40
-    WINDOW_CLIPASS: 7
+    WINDOW_INTER_FRAME_ASSOCIATION: 7
     CLIP_STRIDE: 1
-    SAMPLING_FRAME_NUM_TEST: 3
-    WINDOW_FRAME_NUM_TEST: 10
-    MERGE_ON_CPU: True
+    SAMPLING_FRAME_NUM_TEST: 4
+    MAX_NUM_INSTANCES: 70
+    WINDOW_FRAME_NUM_TEST: 20
     APPLY_CLS_THRES: 0.1
 DATASETS:
   DATASET_RATIO: [ 0.75, 1.0 ]
   TRAIN: ("coco2ytvis2021_train", "ytvis_2021_train")
-  TEST: ("ytvis_2021_val",)
+  TEST: ("ytvis_2021_val",)   # during training, use TEST: ("ytvis_2021_dev",)
 SOLVER:
   IMS_PER_BATCH: 8
   BASE_LR: 0.00005
@@ -31,12 +31,14 @@ SOLVER:
 INPUT:
   FORMAT: "RGB"
   SAMPLING_FRAME_NUM: 3
+  SAMPLING_FRAME_RANGE: 10
+  PRETRAIN_FRAME_NUM: 4
   AUGMENTATIONS: []
   RANDOM_FLIP: "flip_by_clip"
   MIN_SIZE_TRAIN_SAMPLING: "choice_by_clip"
   MIN_SIZE_TRAIN: (320, 352, 384, 416, 448, 480, 512, 544)
   MAX_SIZE_TRAIN: 1024
-  MIN_SIZE_TEST: 480
+  MIN_SIZE_TEST: 360
   CROP:
     ENABLED: True
     TYPE: "relative_range"
